2002-05-17  Tor Lillqvist  <tml@iki.fi>

	* config.h.win32.in: Match new additions in a configure-produced
	config.h.

	* glibconfig.h.win32.in: gssize and gsize as in a
	configure-produced glibconfig.h.

	* glib/glib.def: Add new functions.

Thu May 16 12:24:00 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* acinclude.m4 m4macros/glib-gettext.m4: Incorporate 
 	AM_LC_MESSAGES, AM_PATH_PROG_WITH_TEST as AM_GLIB_* to avoid 
 	dependencies on gettext m4 files. (#81885, Hidetoshi Tajima.)
	
2002-05-14  Alex Larsson <alexl@redhat.com>
	
	* glib/gstrfuncs.c: 
	* glib/gstrfuncs.h:
	New functions g_str_has_suffix and g_str_has_prefix.
	
	* tests/string-test.c: (main):
	Test the new functions.

Mon May 13 23:20:00 2002  Owen Taylor  <otaylor@redhat.com>

	* autogen.sh (have_gettext): Add a check for GNU gettext.
	(Pointed out by Dan Winship in #59386.)

Mon May 13 11:55:33 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in acglib.m4: If sizeof(int) == sizeof(long)
	run compilation tests to determine which way gsize should
	be defined. (#74413, reported by Miroslaw Dobrzanski-Neumann)

Mon May 13 11:42:23 2002  Owen Taylor  <otaylor@redhat.com>
 
        * glib/libcharset/*: Update from libcharset CVS.
 	Includes additional encodings for Solaris (#80396,
	Qingjiang Yuan)
 
 	* configure.in: Add getc_unlocked to CHECK_FUNCS().
 
 	* glib/gmessages.c (strdup_convert): If
 	g_convert_with_fallback() fails, print the error
 	message to stderr the first time, then return
 	the original string. (#78197)
 
2002-05-10  Naba Kumar  <kh_naba@users.sourceforge.net>

	* configure.in: Added "hi" to ALL_LINGUAS.

2002-05-08  Michael Natterer  <mitch@gimp.org>

	* configure.in: fixed yesterdays fix for cross compiling: simply
	check the variable "cross_compiling" which gets set by autoconf.

2002-05-07  Matthias Clasen  <maclas@gmx.de>

	* glib/gmarkup.c (unescape_text): Report unfinished entity
	references as errors rather than running into an assert.  (#80441)
